// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArticleList responsive tests on web should render ListContentContainer correctly 1`] = `
<div
  className="responsive-styles__component-fbPFZZ bPaJEQ"
/>
`;

exports[`ArticleList responsive tests on web should render ListItemLongText correctly 1`] = `
<div
  className="responsive-styles__component-fbPFZZ dQznFS"
/>
`;

exports[`ArticleList responsive tests on web should render ListItemSeparator correctly 1`] = `
<div
  className="responsive-styles__component-fbPFZZ fpmWTY"
/>
`;

exports[`ArticleList responsive tests on web should render ListItemShortText correctly 1`] = `
<div
  className="responsive-styles__component-fbPFZZ jwwxoJ"
/>
`;

exports[`ArticleList responsive tests on web should render ListItemWrapper correctly 1`] = `
<div
  className="responsive-styles__component-fbPFZZ hvIATq"
/>
`;

exports[`ArticleList responsive tests on web should render PageErrorContainer correctly 1`] = `
<div
  className="responsive-styles__component-fbPFZZ NudQU"
/>
`;

exports[`ArticleList responsive tests on web should render PageErrorContentContainer correctly 1`] = `
<div
  className="responsive-styles__component-fbPFZZ kHDyWV"
/>
`;

exports[`ArticleList responsive tests on web should render PageErrorImageContainer correctly 1`] = `
<div
  className="responsive-styles__component-fbPFZZ iLwaDB"
/>
`;
